Fix: proportions on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   min-height: 100vh;
   padding: 11px;
-  /* background-color: #181818; */
   background-image: linear-gradient(to bottom, #181818, #0f0f0f);
   color: #f0f0f0;
 }
@@ -36,23 +35,25 @@
 
 @layer components {
   .cardContainer {
-    @apply flex-grow m-3 sm:w-1/2 md:w-1/3;
-    max-width: 45%;
+    @apply flex-grow m-1 sm:w-1/2 md:w-1/3;
+    max-width: 95%;
   }
   .card {
-    @apply w-full bg-gray-800 m-3 p-4 rounded-lg ;
+    @apply w-full bg-gray-800 m-2 p-5 rounded-lg ;
   }
   .buttonRow {
     @apply flex justify-between items-center mt-2 align-middle;
   }
   .actionButtonContainer {
     @apply flex justify-between items-center;
+    max-width: 80%;
   }
   .actionButton {
-    @apply whitespace-nowrap flex justify-center align-middle cursor-pointer
+    @apply overflow-hidden flex justify-center align-middle cursor-pointer
         bg-gray-200 hover:bg-gray-50 text-gray-900 font-medium p-2 rounded-md
-        border border-gray-700 focus:outline-none overflow-hidden me-2 mb-2 text-xs;
-  }
+        border border-gray-700 focus:outline-none  me-2 mb-2 text-xs;
+    font-size: .6rem;
+      }
   .clearButton {
     @apply cursor-pointer focus:outline-none text-white bg-gray-700 hover:bg-red-800 font-medium rounded-lg py-2 px-4 me-2 mb-2 text-xs;
   }
